--- a/src/main/resources/database.yml
+++ b/src/main/resources/database.yml
@@ -1,108 +1,100 @@
-# 数据库配置文件
+# Arquivo de configuração do banco de dados
 
-# 数据库类型: mysql 或 sqlite
+# Tipo de banco de dados: mysql ou sqlite
 type: sqlite
 
-# MySQL配置（当type为mysql时使用）
+# Configuração MySQL (usado quando type é mysql)
 mysql:
-  # 数据库主机地址
+  # Endereço do host do banco de dados
   host: localhost
-  # 数据库端口
+  # Porta do banco de dados
   port: 3306
-  # 数据库名称
+  # Nome do banco de dados
   database: guild
-  # 数据库用户名
+  # Nome de usuário do banco de dados
   username: root
-  # 数据库密码
+  # Senha do banco de dados
   password: ""
-  # 连接池大小
+  # Tamanho do pool de conexões
   pool-size: 10
-  # 最小空闲连接数
+  # Mínimo de conexões ociosas
   min-idle: 5
-  # 连接超时时间（毫秒）
+  # Tempo limite de conexão (milissegundos)
   connection-timeout: 30000
-  # 空闲超时时间（毫秒）
+  # Tempo limite de ociosidade (milissegundos)
   idle-timeout: 600000
-  # 连接最大生命周期（毫秒）
+  # Tempo de vida máximo da conexão (milissegundos)
   max-lifetime: 1800000
-  # 是否使用SSL
+  # Se usa SSL
   use-ssl: false
-  # 字符编码
+  # Codificação de caracteres
   character-encoding: UTF-8
-  # 时区
+  # Fuso horário
   timezone: UTC
 
-# SQLite配置（当type为sqlite时使用）
+# Configuração SQLite (usado quando type é sqlite)
 sqlite:
-  # 数据库文件路径（相对于插件数据文件夹）
+  # Caminho do arquivo do banco de dados (relativo à pasta de dados do plugin)
   file: guild.db
-  # 是否启用WAL模式
+  # Se ativa modo WAL
   wal-mode: true
-  # 同步模式: OFF, NORMAL, FULL
+  # Modo de sincronização: OFF, NORMAL, FULL
   synchronous: NORMAL
-  # 缓存大小（KB）
+  # Tamanho do cache (KB)
   cache-size: 2000
-  # 页面大小（字节）
+  # Tamanho da página (bytes)
   page-size: 4096
-  # 是否启用外键约束
+  # Se ativa restrições de chave estrangeira
   foreign-keys: true
 
-# 连接池配置
+# Configuração do pool de conexões
 connection-pool:
-  # 最大连接数
+  # Máximo de conexões
   maximum-pool-size: 10
-  # 最小空闲连接数
+  # Mínimo de conexões ociosas
   minimum-idle: 5
-  # 连接超时时间（毫秒）
+  # Tempo limite de conexão (milissegundos)
   connection-timeout: 30000
-  # 空闲超时时间（毫秒）
+  # Tempo limite de ociosidade (milissegundos)
   idle-timeout: 600000
-  # 连接最大生命周期（毫秒）
+  # Tempo de vida máximo da conexão (milissegundos)
   max-lifetime: 1800000
-  # 连接测试查询
+  # Consulta de teste de conexão
   connection-test-query: "SELECT 1"
-  # 连接验证超时时间（毫秒）
+  # Tempo limite de validação (milissegundos)
   validation-timeout: 5000
-  # 是否在连接池启动时验证连接
+  # Se valida conexão ao iniciar pool
   validate-on-start: true
 
-# 数据库表配置
+# Configuração de tabelas do banco de dados
 tables:
-  # 工会表
+  # Tabela de guildas
   guilds:
     name: guilds
-    # 是否自动创建表
+    # Se cria tabela automaticamente
     auto-create: true
-    # 表结构版本
+    # Versão da estrutura da tabela
     version: 1
   
-  # 工会成员表
+  # Tabela de membros da guilda
   guild_members:
     name: guild_members
     auto-create: true
     version: 1
   
-  # 工会申请表
+  # Tabela de aplicações da guilda
   guild_applications:
     name: guild_applications
     auto-create: true
     version: 1
   
-  # 工会邀请表
+  # Tabela de convites da guilda
   guild_invites:
     name: guild_invites
     auto-create: true
     version: 1
 
-# 备份配置
+# Configuração de backup
 backup:
-  # 是否启用自动备份
+  # Se ativa backup automático
   enabled: false
-  # 备份间隔（小时）
-  interval: 24
-  # 备份保留天数
-  retention-days: 7
-  # 备份文件路径
-  path: "backups/"
-  # 备份文件格式
-  format: "yyyy-MM-dd_HH-mm-ss"
