--- a/gui.yml
+++ b/gui.yml
@@ -65,6 +65,7 @@ main-menu:
       name: "&aCriar Guilda"
       lore:
         - "&7Criar uma nova guilda"
+        - "&7Custa moedas"
       glow: true
 
 # Interface de informações da guilda
